# Zentrabux

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: accounts.py  ai.py  auth.py  companies.py  customers.py  debts.py  documents.py  reports.py  suppliers.py  tax.py  transactions.py
app/bot/: __init__.py  api_client.py  i18n.py  keyboards.py  main.py  middlewares.py  session_store.py  states.py  utils.py
app/bot/handlers/: __init__.py  ai_chat.py  company.py  dashboard.py  debts.py  start.py  tax.py  transactions.py
app/core/: config.py  database.py  permissions.py  security.py  telegram_auth.py
app/engines/accounting/: chart_of_accounts.py  engine.py
app/engines/report/: balance_sheet.py  cashflow.py  pnl.py  trial_balance.py
app/engines/tax/: base.py  uzbekistan.py
app/events/: __init__.py  bus.py
app/models/: all_models.py
app/services/: audit.py  debt.py  storage.py
app/services/ai/: __init__.py  client.py  extraction.py  intent.py  memory.py  ocr.py  orchestrator.py  prompts.py  response.py  schemas.py
app/services/document/: __init__.py  act.py  contract.py  excel.py  invoice.py  pdf.py  qr.py
app/services/notification/: __init__.py  base.py  email.py  push.py  service.py  sms.py  telegram.py
app/tasks/: ai_memory.py  celery_app.py  notifications.py  reports.py  tax_calc.py
frontend/: .env.example  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BalanceBeam.css  BalanceBeam.jsx  Layout.jsx  PeriodTabs.jsx  ProtectedRoute.jsx  StatCard.jsx
migrations/: env.py
scripts/: init.sql
tests/: conftest.py
tests/test_accounting/: test_chart_of_accounts.py  test_engine.py
tests/test_ai/: fakes.py  test_extraction.py  test_intent.py  test_memory.py  test_ocr.py  test_orchestrator.py
tests/test_api/: test_auth.py  test_customers.py  test_suppliers.py
tests/test_bot/: test_utils.py
tests/test_core/: test_telegram_auth.py
tests/test_services/: test_debt_service.py  test_storage.py
tests/test_tax/: test_uzbekistan.py
(+15 files in other folders)
