[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zentra"
version = "0.1.0"
description = "Zentra — AI-powered accounting platform for Central Asia"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.2.0"

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Cache & Queue
    "redis[asyncio]>=5.0.0",
    "celery[redis]>=5.4.0",

    # AI
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "tiktoken>=0.7.0",

    # Telegram Bot
    "aiogram>=3.13.0",

    # File Storage
    "boto3>=1.35.0",       # AWS S3 / MinIO
    "pillow>=10.4.0",      # Rasm ishlash
    "python-magic>=0.4.27",

    # Document Generation
    "reportlab>=4.2.0",    # PDF (invoice, contract, akt)
    "openpyxl>=3.1.0",     # Excel export
    "qrcode>=7.4.0",       # QR kod generatsiyasi

    # Notification
    "aiosmtplib>=3.0.0",   # Email
    "httpx>=0.27.0",

    # Utils
    "python-dateutil>=2.9.0",
    "babel>=2.15.0",        # Lokalizatsiya
    "loguru>=0.7.0",
    "sentry-sdk[fastapi]>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",    # Test client
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
